# virtual_touch

./: BUILD  CMakeLists.txt  CMakeLists11.txt  README.md  VideoIn.cpp  arc_main.py  back.txt  camera.py  error.txt  ffmpeg_linux.BUILD  gesture_controller.cpp  gesture_controller.h  gesture_detector.py  gesture_detector_ex.py  gesture_recognizer.py  gesture_time.txt  hand_detector.py  inVid  linux_input.cpp  main.cpp  main.py  mouse_controller.cpp  mouse_controller.h  mouse_controller.py  opencv_linux.BUILD  sample.py  usbipd-auto-attach.ps1  util.py  virtual_touch.py  virtual_touch_app.cpp  virtual_touch_app.h  webcam_manager.cpp  webcam_manager.h  동작.txt  명령어.txt
backup/: BUILD  main.cpp
time/: gesture_time.txt  gesture_time1.txt
